--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   /* 기본 배경색 / 전경색 */
-  --background: #f8f7f5;
+  --background: #f2f0eb;
   --foreground: #313030;
 }
 
@@ -23,7 +23,9 @@
 }
 
 body {
-  background: var(--background) !important;
+  background: var(--background) ;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* border-[#a0a09f] */
