--- a/src/components/myshop/order.css
+++ b/src/components/myshop/order.css
@@ -2,10 +2,9 @@
 .period a,
 input[type="date"],
 .order_search_btn {
-  background-color: #d8d4cc;
-  height: 50px;
-  padding: 0 15px;
-  border-radius: 10px;
+  background-color: #dedad3;
+  padding: 0.5em 2rem;
+  border-radius: 6px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -13,10 +12,9 @@ input[type="date"],
 }
 
 .order_search_btn {
-  background-color: #2d2c2a;
-  padding: 0px 30px;
   color: #d8d4cc;
-  box-shadow: 0 0 10px #b0bfb9;
+  background-color: #2d2c2a;
+  /* padding: 0.5em 2rem; */
 }
 
 * {
