--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,21 @@
 :root {
   /* 기본 배경색 / 전경색 */
   --background: #f2f0eb;
-  --foreground: #524f4c;
+  --foreground: #252525;
+  --graytext: #787676;
 }
 
 /* tailwind 테마 확장 - 커스텀 변수 정의 */
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-graytext: var(--graytext);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-/* 다크모드 지원 - 사용자 OS 설정 감지
-@media (prefers-color-scheme: dark) {
+/* 다크모드 지원 - 사용자 OS 설정 감지 */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #121111;
     --foreground: #f8f7f5;
